--- a/app/src/main/res/layout/activity_tabbed_user.xml
+++ b/app/src/main/res/layout/activity_tabbed_user.xml
@@ -1,19 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="horizontal"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="edu.lclark.githubfragmentapplication.activities.TabbedUserActivity">
-<android.support.v7.widget.Toolbar
-    android:id="@+id/activity_tabbed_user_toolbar"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"/>
+
     <android.support.design.widget.TabLayout
         android:id="@+id/activity_tabbed_user_tabLayout"
         android:layout_width="match_parent"
@@ -21,8 +14,11 @@
         app:tabBackground="@color/colorPrimary"
         app:tabTextColor="@android:color/white"
         />
-<android.support.v4.view.ViewPager
-    android:id="@+id/activity_tabbed_user_viewPager"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"/>
-</LinearLayout>
+
+    <android.support.v4.view.ViewPager
+        android:layout_below="@id/activity_tabbed_user_tabLayout"
+        android:id="@+id/activity_tabbed_user_viewPager"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
+
+</RelativeLayout>
